[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Fonts/Rubik/Rubik-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/terminal-font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Components/Button/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/source-sans-pro/SourceSansPro-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Textures/BlackBackDrop.png" type="Texture" id=5]
[ext_resource path="res://Components/SettingsUI/Backdrop.tres" type="Material" id=6]
[ext_resource path="res://Components/SettingsUI/Settings.gd" type="Script" id=7]
[ext_resource path="res://Assets/Textures/Timer.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=15]
size = 62
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=17]

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 16, 16 )

[sub_resource type="DynamicFont" id=16]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=27]
size = 22
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Shader" id=18]
code = "shader_type canvas_item;

uniform vec4 BGColor: hint_color;
uniform float alph: hint_range(0.0, 1.0);

void fragment() {
	COLOR.rgba = BGColor;
	COLOR.a = alph;
}"

[sub_resource type="ShaderMaterial" id=21]
shader = SubResource( 18 )
shader_param/BGColor = Color( 0.0941176, 0.117647, 0.207843, 1 )
shader_param/alph = 0.5

[sub_resource type="StyleBoxTexture" id=22]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 16, 16 )

[sub_resource type="StyleBoxLine" id=28]
color = Color( 1, 1, 1, 1 )
thickness = 7

[sub_resource type="StyleBoxLine" id=30]
color = Color( 0.0784314, 0.627451, 0.180392, 1 )
thickness = 7

[sub_resource type="StyleBoxLine" id=29]
color = Color( 0.0784314, 0.627451, 0.180392, 1 )
thickness = 7

[sub_resource type="ShaderMaterial" id=23]
shader = SubResource( 18 )
shader_param/BGColor = Color( 0.0941176, 0.117647, 0.207843, 1 )
shader_param/alph = 0.5

[sub_resource type="StyleBoxTexture" id=24]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 16, 16 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="Label" type="Label" parent="."]
margin_left = 32.0
margin_top = 24.0
margin_right = 405.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 15 )
text = "Settings"

[node name="Control" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -61.0
margin_bottom = -61.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_right = -32.0
theme = SubResource( 17 )
custom_constants/separation = 5
alignment = 1

[node name="Display" type="Panel" parent="Control/VBoxContainer"]
material = ExtResource( 6 )
margin_right = 576.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
custom_styles/panel = SubResource( 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/Display"]
margin_left = 32.0
margin_right = 544.0

[node name="Label" type="Label" parent="Control/VBoxContainer/Display/HBoxContainer"]
margin_right = 142.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 16 )
text = "Display Mode"

[node name="Control" type="Control" parent="Control/VBoxContainer/Display/HBoxContainer"]
margin_left = 146.0
margin_right = 512.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DisplayModeButton" type="Button" parent="Control/VBoxContainer/Display/HBoxContainer/Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -15.5
margin_bottom = 15.5
size_flags_horizontal = 3
custom_fonts/font = SubResource( 27 )
text = "WINDOWED"
flat = true

[node name="Music" type="Panel" parent="Control/VBoxContainer"]
material = SubResource( 21 )
margin_top = 37.0
margin_right = 576.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 32 )
custom_styles/panel = SubResource( 22 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/Music"]
margin_left = 32.0
margin_right = 544.0

[node name="Label" type="Label" parent="Control/VBoxContainer/Music/HBoxContainer"]
margin_right = 146.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 16 )
text = "Music Volume"

[node name="Control" type="Control" parent="Control/VBoxContainer/Music/HBoxContainer"]
margin_left = 150.0
margin_right = 512.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="MusicVolume" type="HSlider" parent="Control/VBoxContainer/Music/HBoxContainer/Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -15.5
margin_bottom = 15.5
custom_icons/tick = ExtResource( 8 )
custom_icons/grabber_highlight = ExtResource( 8 )
custom_icons/grabber = ExtResource( 8 )
custom_styles/slider = SubResource( 28 )
custom_styles/grabber_area_highlight = SubResource( 30 )
custom_styles/grabber_area = SubResource( 29 )
max_value = 1.0
step = 0.1
value = 0.5

[node name="SFX" type="Panel" parent="Control/VBoxContainer"]
material = SubResource( 23 )
margin_top = 74.0
margin_right = 576.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 32 )
custom_styles/panel = SubResource( 24 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/SFX"]
margin_left = 32.0
margin_right = 544.0

[node name="Label" type="Label" parent="Control/VBoxContainer/SFX/HBoxContainer"]
margin_right = 230.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 16 )
text = "Sound Effects Volume"

[node name="Control" type="Control" parent="Control/VBoxContainer/SFX/HBoxContainer"]
margin_left = 234.0
margin_right = 512.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="SFXVolume" type="HSlider" parent="Control/VBoxContainer/SFX/HBoxContainer/Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -15.5
margin_bottom = 15.5
custom_icons/tick = ExtResource( 8 )
custom_icons/grabber_highlight = ExtResource( 8 )
custom_icons/grabber = ExtResource( 8 )
custom_styles/slider = SubResource( 28 )
custom_styles/grabber_area_highlight = SubResource( 30 )
custom_styles/grabber_area = SubResource( 29 )
max_value = 1.0
step = 0.1
value = 0.5

[node name="Control" type="Control" parent="Control/VBoxContainer"]
margin_top = 111.0
margin_right = 576.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 37 )

[node name="Back" parent="Control/VBoxContainer/Control" instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -18.5
margin_right = 0.0
margin_bottom = 18.5
text = "Back"
align = 2

[connection signal="pressed" from="Control/VBoxContainer/Display/HBoxContainer/Control/DisplayModeButton" to="." method="_on_DisplayModeButton_pressed"]
[connection signal="value_changed" from="Control/VBoxContainer/Music/HBoxContainer/Control/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/SFX/HBoxContainer/Control/SFXVolume" to="." method="_on_SFXVolume_value_changed"]
